--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,14 @@
 {
   "presets": [
-    ["es2015", {modules: false}],
+    ["es2015", {"modules": false}],
     "stage-0"
-  ]
+  ],
+  "env": {
+    "test": {
+      "presets": [
+        ["es2015"],
+        "stage-0"
+      ]
+    }
+  }
 }
