--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "scripts": {
     "build": "webpack --progress",
     "build:min": "NODE_ENV=production webpack --progress -p",
+    "build:lib": "echo \"Build lib not yet implemented\"",
     "dev": "echo \"Dev not implemented yet.\"",
-    "test": "echo \"Test not implemented yet.\""
+    "test": "NODE_ENV=test mocha --require babel-register --require ./test/spec-setup.js"
   },
   "homepage": "https://spiritapp.io",
   "repository": {
@@ -40,6 +41,12 @@
     "babel-loader": "6.2.5",
     "babel-preset-es2015": "6.14.0",
     "babel-preset-stage-0": "6.5.0",
+    "babel-register": "6.14.0",
+    "chai": "3.5.0",
+    "chai-as-promised": "5.3.0",
+    "jsdom": "9.5.0",
+    "mocha": "3.0.2",
+    "sinon": "1.17.5",
     "webpack": "2.1.0-beta.22"
   }
 }
