--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:min": "NODE_ENV=production webpack --progress -p",
     "build:lib": "echo \"Build lib not yet implemented\"",
     "dev": "echo \"Dev not implemented yet.\"",
-    "test": "NODE_ENV=test mocha --require babel-register --require ./test/spec-setup.js"
+    "test": "NODE_ENV=test mocha --require babel-register --require ./test/spec-setup.js --timeout 5000"
   },
   "homepage": "https://spiritapp.io",
   "repository": {
@@ -39,11 +39,11 @@
   "devDependencies": {
     "babel-core": "6.14.0",
     "babel-loader": "6.2.5",
+    "babel-polyfill": "6.13.0",
     "babel-preset-es2015": "6.14.0",
     "babel-preset-stage-0": "6.5.0",
     "babel-register": "6.14.0",
     "chai": "3.5.0",
-    "chai-as-promised": "5.3.0",
     "jsdom": "9.5.0",
     "mocha": "3.0.2",
     "sinon": "1.17.5",
