Add autobind decorator

--- a/.babelrc
+++ b/.babelrc
@@ -3,12 +3,14 @@
     ["es2015", {"modules": false}],
     "stage-0"
   ],
+  "plugins": ["transform-decorators-legacy"],
   "env": {
     "test": {
       "presets": [
         ["es2015"],
         "stage-0"
-      ]
+      ],
+      "plugins": ["transform-decorators-legacy"]
     }
   }
 }
