--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "babel-cli": "6.14.0",
     "babel-core": "6.14.0",
+    "babel-eslint": "6.1.2",
     "babel-loader": "6.2.5",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-polyfill": "6.13.0",
@@ -46,6 +47,10 @@
     "babel-preset-stage-0": "6.5.0",
     "babel-register": "6.14.0",
     "chai": "3.5.0",
+    "eslint": "3.5.0",
+    "eslint-config-standard": "6.0.1",
+    "eslint-plugin-promise": "2.0.1",
+    "eslint-plugin-standard": "2.0.0",
     "jsdom": "9.5.0",
     "mocha": "3.0.2",
     "sinon": "1.17.5",
