--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,10 @@
 {
 
   "presets": ["es2015", "stage-0"],
-  "plugins": ["transform-decorators-legacy"],
+  "plugins": [
+    "transform-decorators-legacy",
+    "add-module-exports"
+  ],
 
   "env": {
     "umd": {
