Remove mocha timeout

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:lib": "babel src --out-dir lib",
     "build": "npm run build:umd && npm run build:umd:min && npm run build:lib",
     "lint": "eslint .",
-    "test": "NODE_ENV=test mocha --require babel-register --require ./test/bootstrap.js --timeout 5000"
+    "test": "NODE_ENV=test mocha --require babel-register --require ./test/bootstrap.js"
   },
   "homepage": "https://spiritapp.io",
   "repository": {
