Add version to npm builds

--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,8 @@
   "presets": ["es2015", "stage-0"],
   "plugins": [
     "transform-decorators-legacy",
-    "add-module-exports"
+    "add-module-exports",
+    "inline-package-json"
   ],
   "env": {
     "umd": {
