--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-eslint": "7.0.0",
     "babel-loader": "6.2.5",
     "babel-plugin-add-module-exports": "0.2.1",
+    "babel-plugin-inline-package-json": "2.0.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-polyfill": "6.16.0",
     "babel-preset-es2015": "6.16.0",
