--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "title": "Spirit",
   "description": "The animation toolkit for the web",
-  "main": "dist/spirit.min.js",
+  "main": "lib/index.js",
   "files": [
     "LICENSE",
     "dist/",
