--- a/package.json
+++ b/package.json
@@ -64,5 +64,8 @@
     "sinon": "1.17.6",
     "webpack": "2.1.0-beta.25",
     "webpack-bundle-size-analyzer": "2.2.0"
+  },
+  "peerDependencies": {
+    "gsap": "^1.20.2"
   }
 }
