--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "The animation toolkit for the web",
   "main": "lib/index.js",
   "files": [
-    "LICENSE",
+    "spiritjs.d.ts",
     "dist/",
     "lib/"
   ],
