Cleanup babel config and test runner

--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,16 @@
 {
-  "presets": ["es2015", "stage-0"],
+  "presets": [["es2015", {"modules": false}], "stage-0"],
   "plugins": [
     "transform-decorators-legacy",
-    "add-module-exports",
     "inline-package-json"
   ],
   "env": {
-    "umd": {
-      "presets": [
-        ["es2015", {"modules": false}],
-        "stage-0"
-      ],
-      "plugins": ["transform-decorators-legacy"]
+    "test": {
+      "presets": ["es2015", "stage-0"],
+      "plugins": [
+        "transform-decorators-legacy",
+        "inline-package-json"
+      ]
     }
   }
 }
