--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "analyse": "webpack src/index.js dist/spirit.js --json > stats.json",
     "analyse:size": "webpack --json | webpack-bundle-size-analyzer",
     "lint": "eslint .",
-    "test": "NODE_ENV=test mocha --require babel-register --require ./test/bootstrap.js --timeout 5000",
-    "test:watch": "NODE_ENV=test mocha -w --require babel-register --require ./test/bootstrap.js",
+    "test": "NODE_ENV=test mocha -r babel-register -r babel-polyfill -r ./test/bootstrap.js --timeout 5000",
+    "test:watch": "NODE_ENV=test mocha -w -r babel-register -r ./test/bootstrap.js",
     "preversion": "npm test && npm run lint",
     "version": "npm run build:umd && npm run build:umd:min && git add -A dist",
     "postversion": "git push && git push --tags",
