--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   ],
   "scripts": {
     "build": "npm run build:umd && npm run build:umd:min && npm run build:lib",
-    "build:umd": "BABEL_ENV=umd webpack --progress",
-    "build:umd:watch": "BABEL_ENV=umd webpack --progress -w",
-    "build:umd:min": "NODE_ENV=production BABEL_ENV=umd webpack --progress",
-    "build:lib": "babel src --out-dir lib",
-    "build:lib:watch": "babel -w src --out-dir lib",
+    "build:umd": "webpack --progress",
+    "build:umd:watch": "webpack --progress -w",
+    "build:umd:min": "NODE_ENV=production webpack --progress",
+    "build:lib": "BABEL_ENV=modules babel src --out-dir lib",
+    "build:lib:watch": "BABEL_ENV=modules babel -w src --out-dir lib",
     "analyse": "webpack src/index.js dist/spirit.js --json > stats.json",
     "analyse:size": "webpack --json | webpack-bundle-size-analyzer",
     "lint": "eslint .",
-    "test": "NODE_ENV=test mocha -r babel-register -r babel-polyfill -r ./test/bootstrap.js --timeout 5000",
-    "test:watch": "NODE_ENV=test mocha -w -r babel-register -r ./test/bootstrap.js",
+    "test": "BABEL_ENV=modules NODE_ENV=test mocha -r babel-register -r babel-polyfill -r ./test/bootstrap.js --timeout 5000",
+    "test:watch": "BABEL_ENV=modules NODE_ENV=test mocha -w -r babel-register -r ./test/bootstrap.js",
     "preversion": "npm test && npm run lint",
     "version": "npm run build:umd && npm run build:umd:min && git add -A dist",
     "postversion": "git push && git push --tags",
