--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "build:umd": "webpack --progress",
     "build:umd:watch": "webpack --progress -w",
     "build:umd:min": "NODE_ENV=production webpack --progress",
-    "build:lib": "BABEL_ENV=modules babel src --out-dir lib",
-    "build:lib:watch": "BABEL_ENV=modules babel -w src --out-dir lib",
+    "build:lib": "babel src --out-dir lib",
+    "build:lib:watch": "babel -w src --out-dir lib",
     "analyse": "webpack src/index.js dist/spirit.js --json > stats.json",
     "analyse:size": "webpack --json | webpack-bundle-size-analyzer",
     "lint": "eslint .",
-    "test": "BABEL_ENV=modules NODE_ENV=test mocha -r babel-register -r babel-polyfill -r ./test/bootstrap.js --timeout 5000",
-    "test:watch": "BABEL_ENV=modules NODE_ENV=test mocha -w -r babel-register -r ./test/bootstrap.js",
+    "test": "mocha",
+    "test:watch": " mocha -w",
     "preversion": "npm test && npm run lint",
     "version": "npm run build:umd && npm run build:umd:min && git add -A dist",
     "postversion": "git push && git push --tags",
@@ -45,32 +45,31 @@
   },
   "typings": "./spiritjs.d.ts",
   "devDependencies": {
-    "babel-cli": "6.16.0",
-    "babel-core": "6.17.0",
-    "babel-eslint": "7.0.0",
-    "babel-loader": "6.2.5",
-    "babel-plugin-add-module-exports": "0.2.1",
+    "@babel/cli": "7.4.4",
+    "@babel/core": "7.4.4",
+    "@babel/plugin-proposal-class-properties": "7.4.4",
+    "@babel/plugin-proposal-decorators": "7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.4",
+    "@babel/polyfill": "7.4.4",
+    "@babel/preset-env": "7.4.4",
+    "@babel/register": "7.4.4",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "8.0.5",
     "babel-plugin-inline-package-json": "2.0.0",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-polyfill": "6.16.0",
-    "babel-preset-es2015": "6.16.0",
-    "babel-preset-stage-0": "6.16.0",
-    "babel-register": "6.16.3",
-    "chai": "3.5.0",
-    "eslint": "3.8.0",
-    "eslint-config-standard": "6.2.0",
-    "eslint-plugin-promise": "3.0.0",
-    "eslint-plugin-standard": "2.0.1",
-    "jsdom": "9.8.0",
-    "mocha": "3.1.2",
-    "sinon": "1.17.6",
-    "webpack": "2.1.0-beta.25",
-    "webpack-bundle-size-analyzer": "2.2.0"
+    "chai": "4.2.0",
+    "core-js": "3",
+    "eslint": "5.16.0",
+    "eslint-config-standard": "12.0.0",
+    "eslint-plugin-promise": "4.1.1",
+    "eslint-plugin-standard": "4.0.0",
+    "jsdom": "15.0.0",
+    "mocha": "6.1.4",
+    "sinon": "7.3.2",
+    "webpack": "4.30.0",
+    "webpack-bundle-size-analyzer": "3.0.0",
+    "webpack-cli": "3.3.1"
   },
   "dependencies": {
-    "mitt": "^1.1.2"
-  },
-  "peerDependencies": {
-    "gsap": "*"
+    "mitt": "^1.1.3"
   }
 }
