Config webpack with babel

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,13 @@
 {
-  "extends": "standard",
-  "plugins": [
-    "standard",
-    "promise"
-  ],
   "parser": "babel-eslint",
+  "ecmaFeatures": {
+    "modules": true,
+    "spread" : true,
+    "restParams" : true
+  },
+  "parserOptions": {
+    "sourceType": "module"
+  },
   "env": {
     "node": true,
     "mocha": true,
