--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "2.4.2",
   "title": "Spirit",
   "description": "The animation toolkit for the web",
-  "main": "dist/spirit.js",
-  "module": "lib/index.js",
+  "main": "lib/index.js",
   "files": [
     "spiritjs.d.ts",
     "dist/",
