--- a/package.json
+++ b/package.json
@@ -60,11 +60,13 @@
     "chai": "4.2.0",
     "core-js": "3.6.4",
     "eslint": "6.8.0",
+    "eslint-config-prettier": "6.10.0",
     "eslint-config-standard": "14.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
     "jsdom": "16.0.1",
     "mocha": "7.0.1",
+    "prettier": "1.19.1",
     "sinon": "8.1.1",
     "webpack": "4.41.5",
     "webpack-bundle-size-analyzer": "3.1.0",
