--- a/package.json
+++ b/package.json
@@ -44,38 +44,52 @@
   },
   "typings": "./spiritjs.d.ts",
   "devDependencies": {
-    "@babel/cli": "7.8.3",
-    "@babel/core": "7.8.3",
+    "@babel/cli": "7.8.4",
+    "@babel/core": "7.9.0",
     "@babel/plugin-proposal-class-properties": "7.8.3",
     "@babel/plugin-proposal-decorators": "7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "7.8.3",
-    "@babel/polyfill": "7.8.3",
-    "@babel/preset-env": "7.8.3",
-    "@babel/register": "7.8.3",
-    "@types/chai": "4.2.7",
-    "@types/mocha": "5.2.7",
-    "babel-eslint": "10.0.3",
-    "babel-loader": "8.0.6",
+    "@babel/plugin-proposal-object-rest-spread": "7.9.0",
+    "@babel/polyfill": "7.8.7",
+    "@babel/preset-env": "7.9.0",
+    "@babel/register": "7.9.0",
+    "@types/chai": "4.2.11",
+    "@types/mocha": "7.0.2",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.1.0",
     "babel-plugin-inline-package-json": "2.0.0",
     "chai": "4.2.0",
     "core-js": "3.6.4",
     "eslint": "6.8.0",
-    "eslint-config-prettier": "6.10.0",
-    "eslint-config-standard": "14.1.0",
+    "eslint-config-prettier": "6.10.1",
+    "eslint-config-standard": "14.1.1",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
-    "jsdom": "16.0.1",
-    "mocha": "7.0.1",
-    "prettier": "1.19.1",
-    "sinon": "8.1.1",
-    "webpack": "4.41.5",
+    "jsdom": "16.2.2",
+    "mocha": "7.1.1",
+    "prettier": "2.0.3",
+    "sinon": "9.0.1",
+    "webpack": "4.42.1",
     "webpack-bundle-size-analyzer": "3.1.0",
-    "webpack-cli": "3.3.10"
+    "webpack-cli": "3.3.11"
   },
   "dependencies": {
     "mitt": "^1.2.0"
   },
   "resolutions": {
-    "serialize-javascript": "^2.1.1"
+    "@babel/preset-env": "^7.8.7"
+  },
+  "mocha": {
+    "diff": true,
+    "timeout": 5000,
+    "bail": true,
+    "exit": true,
+    "slow": 200,
+    "ui": "bdd",
+    "require": [
+      "@babel/register",
+      "@babel/polyfill",
+      "test/bootstrap.js"
+    ],
+    "watch-files": ["test/*-spec.js"]
   }
 }
