--- a/package.json
+++ b/package.json
@@ -44,39 +44,37 @@
   },
   "typings": "./spiritjs.d.ts",
   "devDependencies": {
-    "@babel/cli": "7.10.5",
-    "@babel/core": "7.11.0",
-    "@babel/plugin-proposal-class-properties": "7.10.4",
-    "@babel/plugin-proposal-decorators": "7.10.5",
-    "@babel/plugin-proposal-object-rest-spread": "7.11.0",
-    "@babel/polyfill": "7.10.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/register": "7.10.5",
-    "@types/chai": "4.2.12",
-    "@types/mocha": "8.0.1",
+    "@babel/cli": "7.12.10",
+    "@babel/core": "7.12.10",
+    "@babel/plugin-proposal-class-properties": "7.12.1",
+    "@babel/plugin-proposal-decorators": "7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "7.12.1",
+    "@babel/polyfill": "7.12.1",
+    "@babel/preset-env": "7.12.11",
+    "@babel/register": "7.12.10",
+    "@types/chai": "4.2.14",
+    "@types/mocha": "8.2.0",
     "babel-eslint": "10.1.0",
-    "babel-loader": "8.1.0",
+    "babel-loader": "8.2.2",
     "babel-plugin-inline-package-json": "2.0.0",
     "chai": "4.2.0",
-    "core-js": "3.6.5",
-    "eslint": "7.6.0",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-config-standard": "14.1.1",
+    "core-js": "3.8.1",
+    "eslint": "7.15.0",
+    "eslint-config-prettier": "7.0.0",
+    "eslint-config-standard": "16.0.2",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-standard": "4.0.1",
-    "jsdom": "16.3.0",
-    "mocha": "8.1.0",
-    "prettier": "2.0.5",
-    "sinon": "9.0.2",
-    "webpack": "4.44.1",
+    "eslint-plugin-standard": "5.0.0",
+    "jsdom": "16.4.0",
+    "mocha": "8.2.1",
+    "prettier": "2.2.1",
+    "sinon": "9.2.2",
+    "terser-webpack-plugin": "5.0.3",
+    "webpack": "5.10.3",
     "webpack-bundle-size-analyzer": "3.1.0",
-    "webpack-cli": "3.3.12"
+    "webpack-cli": "4.2.0"
   },
   "dependencies": {
     "mitt": "2.1.0"
-  },
-  "resolutions": {
-    "@babel/preset-env": "^7.8.7"
   },
   "mocha": {
     "diff": true,
