--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,25 @@
 {
   "presets": [
-    ["@babel/preset-env"]
+    [
+      "@babel/preset-env",
+      {
+        "loose": true
+      }
+    ]
   ],
   "plugins": [
-    ["@babel/plugin-proposal-decorators", {
-      "legacy": true
-    }],
-    ["@babel/plugin-proposal-class-properties", {
-      "loose" : true
-    }],
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+    ],
     "@babel/plugin-proposal-object-rest-spread",
     "inline-package-json"
   ]
