--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "@babel/register": "7.16.9",
     "@types/chai": "4.3.0",
     "@types/mocha": "9.1.0",
-    "babel-eslint": "10.1.0",
     "babel-loader": "8.2.3",
     "babel-plugin-inline-package-json": "2.0.0",
     "chai": "4.3.4",
@@ -74,6 +73,7 @@
     "webpack-cli": "4.9.2"
   },
   "dependencies": {
+    "@babel/eslint-parser": "7.16.5",
     "mitt": "3.0.0"
   },
   "mocha": {
