--- a/package.json
+++ b/package.json
@@ -44,37 +44,40 @@
   },
   "typings": "./spiritjs.d.ts",
   "devDependencies": {
-    "@babel/cli": "7.23.4",
-    "@babel/core": "7.23.6",
+    "@babel/cli": "7.24.7",
+    "@babel/core": "7.24.7",
     "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@babel/plugin-proposal-decorators": "7.23.6",
+    "@babel/plugin-proposal-decorators": "7.24.7",
     "@babel/plugin-proposal-object-rest-spread": "7.20.7",
     "@babel/polyfill": "7.12.1",
-    "@babel/preset-env": "7.23.6",
-    "@babel/register": "7.22.15",
-    "@types/chai": "4.3.11",
-    "@types/mocha": "10.0.6",
+    "@babel/preset-env": "7.24.7",
+    "@babel/register": "7.24.6",
+    "@types/chai": "4.3.16",
+    "@types/mocha": "10.0.7",
     "babel-loader": "9.1.3",
     "babel-plugin-inline-package-json": "2.0.0",
     "chai": "4.3.10",
-    "core-js": "3.34.0",
+    "core-js": "3.37.1",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-config-standard": "17.1.0",
-    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-promise": "6.2.0",
     "eslint-plugin-standard": "5.0.0",
-    "jsdom": "23.0.1",
-    "mocha": "10.2.0",
-    "prettier": "3.1.1",
+    "jsdom": "24.1.0",
+    "mocha": "10.5.1",
+    "prettier": "3.3.2",
     "sinon": "17.0.1",
-    "terser-webpack-plugin": "5.3.9",
-    "webpack": "5.89.0",
+    "terser-webpack-plugin": "5.3.10",
+    "webpack": "5.92.1",
     "webpack-bundle-size-analyzer": "3.1.0",
     "webpack-cli": "5.1.4"
   },
   "dependencies": {
-    "@babel/eslint-parser": "7.23.3",
+    "@babel/eslint-parser": "7.24.7",
     "mitt": "3.0.1"
+  },
+  "resolutions": {
+    "braces": ">=3.0.3"
   },
   "mocha": {
     "diff": true,
