--- a/package.json
+++ b/package.json
@@ -44,14 +44,12 @@
   },
   "typings": "./spiritjs.d.ts",
   "devDependencies": {
-    "@babel/cli": "7.24.7",
-    "@babel/core": "7.24.7",
+    "@babel/cli": "7.28.6",
+    "@babel/core": "7.28.6",
     "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@babel/plugin-proposal-decorators": "7.24.7",
-    "@babel/plugin-proposal-object-rest-spread": "7.20.7",
-    "@babel/polyfill": "7.12.1",
-    "@babel/preset-env": "7.24.7",
-    "@babel/register": "7.24.6",
+    "@babel/plugin-proposal-decorators": "7.28.6",
+    "@babel/preset-env": "7.28.6",
+    "@babel/register": "7.28.6",
     "@types/chai": "4.3.16",
     "@types/mocha": "10.0.7",
     "babel-loader": "9.1.3",
@@ -61,38 +59,25 @@
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-config-standard": "17.1.0",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-n": "17.23.2",
     "eslint-plugin-promise": "6.2.0",
     "eslint-plugin-standard": "5.0.0",
     "jsdom": "24.1.0",
-    "mocha": "10.5.1",
+    "mocha": "11.7.5",
     "prettier": "3.3.2",
     "sinon": "17.0.1",
     "terser-webpack-plugin": "5.3.10",
+    "tsx": "4.21.0",
     "webpack": "5.92.1",
     "webpack-bundle-size-analyzer": "3.1.0",
     "webpack-cli": "5.1.4"
   },
   "dependencies": {
-    "@babel/eslint-parser": "7.24.7",
+    "@babel/eslint-parser": "7.28.6",
     "mitt": "3.0.1"
   },
   "resolutions": {
     "braces": ">=3.0.3"
-  },
-  "mocha": {
-    "diff": true,
-    "timeout": 5000,
-    "bail": true,
-    "exit": true,
-    "slow": 200,
-    "ui": "bdd",
-    "require": [
-      "@babel/register",
-      "@babel/polyfill",
-      "test/bootstrap.js"
-    ],
-    "watch-files": [
-      "test/*-spec.js"
-    ]
   }
 }
