--- a/package.json
+++ b/package.json
@@ -46,38 +46,35 @@
   "devDependencies": {
     "@babel/cli": "7.28.6",
     "@babel/core": "7.28.6",
+    "@babel/eslint-parser": "7.28.6",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-proposal-decorators": "7.28.6",
     "@babel/preset-env": "7.28.6",
     "@babel/register": "7.28.6",
-    "@types/chai": "4.3.16",
-    "@types/mocha": "10.0.7",
-    "babel-loader": "9.1.3",
+    "@types/chai": "5.2.3",
+    "@types/mocha": "10.0.10",
+    "babel-loader": "10.0.0",
     "babel-plugin-inline-package-json": "2.0.0",
-    "chai": "4.3.10",
-    "core-js": "3.37.1",
-    "eslint": "8.56.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-config-standard": "17.1.0",
-    "eslint-plugin-import": "2.32.0",
-    "eslint-plugin-n": "17.23.2",
-    "eslint-plugin-promise": "6.2.0",
-    "eslint-plugin-standard": "5.0.0",
-    "jsdom": "24.1.0",
+    "chai": "5.2.0",
+    "core-js": "3.48.0",
+    "eslint": "9.39.2",
+    "eslint-config-prettier": "10.1.8",
+    "globals": "17.2.0",
+    "jsdom": "27.4.0",
     "mocha": "11.7.5",
-    "prettier": "3.3.2",
-    "sinon": "17.0.1",
-    "terser-webpack-plugin": "5.3.10",
+    "prettier": "3.8.1",
+    "sinon": "21.0.1",
+    "terser-webpack-plugin": "5.3.16",
     "tsx": "4.21.0",
-    "webpack": "5.92.1",
+    "webpack": "5.104.1",
     "webpack-bundle-size-analyzer": "3.1.0",
-    "webpack-cli": "5.1.4"
+    "webpack-cli": "6.0.1"
   },
   "dependencies": {
-    "@babel/eslint-parser": "7.28.6",
     "mitt": "3.0.1"
   },
   "resolutions": {
-    "braces": ">=3.0.3"
+    "braces": ">=3.0.3",
+    "diff": ">=8.0.3"
   }
 }
